feat: Added possibility to get available number types